# PicoGreg

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/display/: st7789.c  st7789.h
src/heatmap/: heatmap.c  heatmap.h
